--- a/tasks/Linux.yml
+++ b/tasks/Linux.yml
@@ -10,7 +10,7 @@
   file:
     path: "{{ teamcity_agent_install_dir }}"
     state: directory
-    mode: '0755'
+    mode: "0755"
 
 - name: Download Agent zip
   get_url:
