added java setup step DO-659

--- a/tasks/Darwin.yml
+++ b/tasks/Darwin.yml
@@ -5,11 +5,13 @@
     name: geerlingguy.mac.homebrew
   vars:
     # This is overwritten by our group_vars (cpp.build-machines)
-    homebrew_taps:
-      - name: AdoptOpenJDK/openjdk 
     homebrew_installed_packages:
-      - adoptopenjdk11
+      - openjdk@21
   when: not cpp_buildmachine
+  
+- name: setup java
+  command: ln -sfn /usr/local/opt/openjdk/libexec/openjdk.jdk /Library/Java/JavaVirtualMachines/openjdk.jdk
+  become: true
 
 - name: Create teamcity agent install directory
   file:
