--- a/tasks/Darwin.yml
+++ b/tasks/Darwin.yml
@@ -14,26 +14,28 @@
   become: true
 
 - name: Create teamcity agent install directory
-  file:
+  ansible.builtin.file:
     path: "{{ teamcity_agent_install_dir }}"
     state: directory
     mode: "0755"
+    owner: "{{ teamcity_build_username }}"
 
 - name: Download Agent zip
-  get_url:
+  ansible.builtin.get_url:
     url: "{{ teamcity_buildagent_zip_url }}"
     dest: "{{ teamcity_downloaded_buildagent_zip }}"
     mode: 0775
 
 - name: "Ensure LaunchAgents directory exists"
-  file:
+  ansible.builtin.file:
     path: /Users/{{ teamcity_build_username }}/Library/LaunchAgents/"
     state: directory
     mode: 0755
+    owner: "{{ teamcity_build_username }}"
 
 - name: Install Build Agents
   include_tasks:
-    file: "single_build_agent.yml"
+    ansible.builtin.file: "single_build_agent.yml"
   vars:
     agent_number_formatted: "{{ '%02d' | format(agent_number) }}"
   loop: "{{ range(1, teamcity_number_of_agents + 1, 1) | list }}"
