--- a/tasks/Darwin.yml
+++ b/tasks/Darwin.yml
@@ -1,5 +1,4 @@
 ---
-
 - name: Insall Homebrew + openjdk
   ansible.builtin.include_role:
     name: geerlingguy.mac.homebrew
@@ -8,7 +7,7 @@
     homebrew_installed_packages:
       - openjdk@17
   when: not cpp_buildmachine
-  
+
 - name: setup java
   ansible.builtin.command: ln -sfn /usr/local/opt/openjdk@17/libexec/openjdk.jdk /Library/Java/JavaVirtualMachines/openjdk-17.jdk
   become: true
@@ -35,7 +34,7 @@
 
 - name: Install Build Agents
   include_tasks:
-    ansible.builtin.file: "single_build_agent.yml"
+    include_task: "single_build_agent.yml"
   vars:
     agent_number_formatted: "{{ '%02d' | format(agent_number) }}"
   loop: "{{ range(1, teamcity_number_of_agents + 1, 1) | list }}"
