--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Read platform-specific variables
-  include_vars: "{{ varfile }}"
+  ansible.builtin.include_vars: "{{ varfile }}"
   with_first_found:
     - files:
         - "{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
@@ -12,7 +12,7 @@
     loop_var: varfile
 
 - name: Set up TeamCity agent
-  include_tasks: "{{ taskfile }}"
+  ansible.builtin.include_tasks: "{{ taskfile }}"
   with_first_found:
     - "{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
     - "{{ ansible_distribution }}.yml"
