fixed error DO-659

--- a/tasks/Darwin.yml
+++ b/tasks/Darwin.yml
@@ -46,6 +46,7 @@
     owner: "{{ teamcity_build_username }}"
     recurse: true
   become: true
+  loop: "{{ teamcity_agents }}"
 
 - name: "Deploy TeamCity launchd service"
   ansible.builtin.template:
