--- a/tasks/Windows.yml
+++ b/tasks/Windows.yml
@@ -69,12 +69,14 @@
   loop: "{{ teamcity_agents }}"
 
 - name: Install agent Service
-  ansible.windows.win_shell: "launcher\\bin\\TeamCityAgentService-windows-x86-32.exe -i launcher\\conf\\wrapper.conf"
+  ansible.windows.win_shell: "bin\\service.install.bat"
   args:
     chdir: "{{ teamcity_agent_install_dir }}\\{{ item.teamcity_agent_name }}"
   loop: "{{ teamcity_agents }}"
   become: true
 
 - name: Start agent service
-  ansible.windows.win_shell: "{{ teamcity_agent_install_dir }}\\{{ item.teamcity_agent_name }}\\bin\\service.start.bat"
+  ansible.windows.win_shell: "bin\\service.start.bat"
+  args:
+    chdir: "{{ teamcity_agent_install_dir }}\\{{ item.teamcity_agent_name }}"
   loop: "{{ teamcity_agents }}"
