should work now DO-659

--- a/tasks/Windows.yml
+++ b/tasks/Windows.yml
@@ -69,9 +69,9 @@
   loop: "{{ teamcity_agents }}"
 
 - name: Install agent Service
-  ansible.windows.win_shell: "bin\\service.install.bat"
+  ansible.windows.win_shell: .\service.install.bat
   args:
-    chdir: "{{ teamcity_agent_install_dir }}\\{{ item.teamcity_agent_name }}"
+     chdir: "{{ teamcity_agent_install_dir }}\\{{ item.teamcity_agent_name }}\\bin"
   loop: "{{ teamcity_agents }}"
   become: true
 
