Update Linux.yml DO-659

--- a/tasks/Linux.yml
+++ b/tasks/Linux.yml
@@ -3,6 +3,7 @@
   ansible.builtin.yum:
     name: java-1.8.0-openjdk-devel
     state: present 
+  become: true
     
 - name: Create teamcity agent install directory
   ansible.builtin.file:
