--- a/tasks/Darwin.yml
+++ b/tasks/Darwin.yml
@@ -1,5 +1,5 @@
 ---
-- name: Insatll Homebrew + OpenJDK
+- name: Install Homebrew + OpenJDK
   ansible.builtin.include_role:
     name: geerlingguy.mac.homebrew
   vars:
@@ -11,7 +11,7 @@
 - name: Symlink OpenJDK to system-wide Java VMs
   ansible.builtin.file:
     state: link
-    src: /usr/local/opt/openjdk@17/libexec/openjdk.jdk
+    src: "{{ homebrew_prefix }}/opt/openjdk@17/libexec/openjdk.jdk"
     dest: /Library/Java/JavaVirtualMachines/openjdk-17.jdk
   become: true
 
