preferred use module "package" instead "yum" in an heterogeneous environment

--- a/tasks/Linux.yml
+++ b/tasks/Linux.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install Java
-  ansible.builtin.yum:
+  ansible.builtin.package:
     name: java-1.8.0-openjdk-devel
     state: present
   become: true
